--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+DriveLogScraper/.idea/workspace.xml
+DriveLogScraper/.idea/.name
+DriveLogScraper/.idea/DriveLogScraper.iml
+DriveLogScraper/.idea/misc.xml
