--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ DriveLogScraper/.idea/workspace.xml
 DriveLogScraper/.idea/.name
 DriveLogScraper/.idea/DriveLogScraper.iml
 DriveLogScraper/.idea/misc.xml
+DriveLogScraper/.idea/vcs.xml
+DriveLogScraper/.idea/modules.xml
